# pythonclub

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pythonclub/: config.py  main.py  repo.py
pythonclub/static/assets/css/: fightthis.css  main.css
pythonclub/static/assets/fonts/: fightthis-webfont.eot
pythonclub/templates/: index.html
tests/: test_pythonclub.py
